Fix logo alignment/spacing/sizing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -289,9 +289,10 @@
 		justify-content: center;
 		align-items: flex-end;
 		flex-direction: row;
+		flex-wrap: wrap;
 
 		* {
-			margin: 0 0.5em;
+			margin: 0.5em;
 		}
 
 		*:first-child {
